# serializer version: 1
# name: test_react_agent_graph_structure[None-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent -.-> __end__;
  	agent -.-> tools;
  	tools --> agent;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	pre_model_hook --> agent;
  	agent --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent -.-> __end__;
  	agent -.-> tools;
  	pre_model_hook --> agent;
  	tools --> pre_model_hook;
  
  '''
# ---
# name: test_react_agent_graph_structure[post_model_hook-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[post_model_hook-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook -.-> __end__;
  	post_model_hook -.-> agent;
  	post_model_hook -.-> tools;
  	tools --> agent;
  
  '''
# ---
# name: test_react_agent_graph_structure[post_model_hook-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	pre_model_hook --> agent;
  	post_model_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[post_model_hook-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	post_model_hook -.-> __end__;
  	post_model_hook -.-> pre_model_hook;
  	post_model_hook -.-> tools;
  	pre_model_hook --> agent;
  	tools --> pre_model_hook;
  
  '''
# ---
# name: test_react_agent_graph_structure_with_individual_nodes[no_post_hook-no_pre_hook-no_tools]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure_with_individual_nodes[no_post_hook-no_pre_hook-two_tools]
  '''
  graph TD;
  	__start__ --> agent;
  	agent -.-> __end__;
  	agent -.-> tool;
  	agent -.-> tool2;
  	tool --> agent;
  	tool2 --> agent;
  
  '''
# ---
# name: test_react_agent_graph_structure_with_individual_nodes[no_post_hook-with_pre_hook-no_tools]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	pre_model_hook --> agent;
  	agent --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure_with_individual_nodes[no_post_hook-with_pre_hook-two_tools]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent -.-> __end__;
  	agent -.-> tool;
  	agent -.-> tool2;
  	pre_model_hook --> agent;
  	tool --> pre_model_hook;
  	tool2 --> pre_model_hook;
  
  '''
# ---
# name: test_react_agent_graph_structure_with_individual_nodes[with_post_hook-no_pre_hook-no_tools]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure_with_individual_nodes[with_post_hook-no_pre_hook-two_tools]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook -.-> __end__;
  	post_model_hook -.-> agent;
  	post_model_hook -.-> tool;
  	post_model_hook -.-> tool2;
  	tool --> agent;
  	tool2 --> agent;
  
  '''
# ---
# name: test_react_agent_graph_structure_with_individual_nodes[with_post_hook-with_pre_hook-no_tools]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	pre_model_hook --> agent;
  	post_model_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure_with_individual_nodes[with_post_hook-with_pre_hook-two_tools]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	post_model_hook -.-> __end__;
  	post_model_hook -.-> pre_model_hook;
  	post_model_hook -.-> tool;
  	post_model_hook -.-> tool2;
  	pre_model_hook --> agent;
  	tool --> pre_model_hook;
  	tool2 --> pre_model_hook;
  
  '''
# ---
